--- a/open-webui/config.yaml
+++ b/open-webui/config.yaml
@@ -13,9 +13,8 @@ arch:
   - aarch64
   - amd64
 startup: services
-host_network: true
 ports:
-  8080/tcp: 8080
+  8080/tcp: null
 ports_description:
   8080/tcp: "Open WebUI Web Interface"
 map:
