--- a/open-webui/config.yaml
+++ b/open-webui/config.yaml
@@ -14,7 +14,7 @@ arch:
   - amd64
 startup: services
 ports:
-  8080/tcp: null
+  8080/tcp: 8080
 ports_description:
   8080/tcp: "Open WebUI Web Interface"
 map:
